product_docs/docs/edb-postgres-ai/1.4/hybrid-manager/using_hybrid_manager/upgrading_hm/index.mdx
---
title: Upgrading Hybrid Manager
navTitle: Upgrading Hybrid Manager
description: Learn how to upgrade your Hybrid Manager installation across supported versions.
deepToC: true
navigation: 
- upgrade_operator_rhos
- 1.4.2_to_1.4.3
- 1.4.1_to_1.4.2
- 1.4.0_to_1.4.1
- 1.3.x_to_1.4
- 2026.5.1_to_1.4
- 2026.4_to_2026.5.1
- 2026.3_to_2026.4
- 2026.2_to_2026.3
- 2026.1_to_2026.2
- 2025.12_to_2026.1
- 2025.11_to_2025.12
- 1.3.x_to_2025.11
redirects: 
- /edb-postgres-ai/latest/hybrid-manager/using_hybrid_manager/in_place_upgrade/
- /edb-postgres-ai/latest/hybrid-manager/using_hybrid_manager/upgrading_hm/in_place_upgrade/
---

Hybrid Manager (HM) offers a [dual release strategy](/edb-postgres-ai/current/hybrid-manager/release_notes/#hybrid-manager-dual-release-strategy): **Long-Term Support (LTS) Releases** and **Innovation Releases (IR)**. Because these streams follow different versioning logic, the supported paths for moving among them depend on your current version and the target environment.

!!!tip

If you want to upgrade your **Postgres database clusters** instead, see [Upgrading database clusters in Hybrid Manager](../upgrading/).
!!!

## Release types

![LTS and IR releases](images/hybridmanager_lts_vs_ir.svg)

**Innovation Releases (IR)** are delivered monthly. They focus on continuous platform hardening, workflow improvements, stability, reliability, and introduce smaller, iterative new features. They are ideal for customers and teams that want early access to the latest capabilities and want to follow the leading edge of product development.

**Long-Term Support (LTS) releases** are delivered twice a year. They consolidate the innovations from preceding monthly releases into a stable, well-tested foundation suited to production deployments that require predictability and an extended support window. Each LTS release is supported for 15 months from its release date, with monthly patch releases throughout that period delivering bug fixes and security updates.

| | LTS | Innovation Release (IR) |
|---|---|---|
| **Version format** | Semantic versioning (for example, `1.x.x`) | Calendar-based (for example, `2026.x`) |
| **Release cadence** | Bi-annual | Monthly |
| **Patches** | Monthly patch releases with bug and security fixes | No planned patches—replaced by the next monthly release. Critical fixes, such as CVEs, may result in an unplanned patch. |
| **Upgrade path** | One minor version at a time (for example, 1.3.x → 1.4.y); skipping minor versions not supported | Sequential month-to-month upgrades required |
| **Best for** | Production environments requiring stability and extended support | Development, testing, or teams wanting leading-edge features |

!!!important
For current support timelines and end-of-support dates, see [Platform Compatibility](https://www.enterprisedb.com/resources/platform-compatibility#hybrid%20management%20).
!!!

## IR upgrade paths

You must upgrade month-to-month within the IR stream (for example, 2025.10 → 2025.11). Each IR cycle runs until a consolidation point, where a new LTS version is released. To continue receiving updates after a consolidation point, you must transition to the newly released LTS version (for example, 1.5.0), which then serves as the foundation for the next IR cycle.

![IR sequential upgrade](images/IR_updated.svg)

## LTS upgrade paths

LTS releases follow standard semantic versioning (`major.minor.patch`, for example, **1.4.x**). These versions focus on stability, receiving monthly patch releases with bug and security fixes for their full support lifespan.

### Minor and patch version upgrades

To upgrade to the next minor version (for example, **1.3._latest_** to **1.4.0**), you must be on the latest available patch of your current minor version first.

Within the same minor version, patch upgrades are flexible: you may upgrade from any patch to any higher patch (for example, 1.3.1 to 1.3.5) without installing intermediate patches.

![LTS minor and patch releases](images/lts_minor_patch_updated.svg)

### Major version upgrades

When a new major version (for example, **2.0**) is released, you must be running the latest available minor and patch release of the **1._latest_._latest_** stream to perform the upgrade.

![LTS major version upgrade](images/LTS_major_simple.svg)

## Cross-stream upgrade paths

Moving between LTS and Innovation Releases is possible but has specific constraints.

![Cross-stream upgrade paths](images/cross-stream_updated.svg)

### Innovation Release to LTS

You can move from the **final Innovation Release** of a cycle to the **LTS release** that consolidates those features, but not from any other IR in the cycle.

To determine if your current IR supports transitioning to LTS, check the upgrade instructions for that specific version—they indicate whether the transition is supported.

### LTS to Innovation Release

You can upgrade an LTS release to its immediate succeeding Innovation Release. You can't jump to an arbitrary or later IR—upgrade to the immediate successor first, then follow the sequential IR upgrade path.

!!!Warning

Once you move from an LTS release to an Innovation Release, you can't return to LTS until the next consolidation point (see [Innovation Release to LTS](#innovation-release-to-lts) above). Consolidation points occur twice a year.
!!!

## Service availability during upgrades

Some upgrades may trigger an automatic restart of your HM-managed Postgres database clusters. To avoid unexpected interruptions, check the service availability notes in the specific upgrade guide you are following.

## Scenario changes on upgrade

From HM 1.4.2 onwards, `marketplace` (the kapp package manager and the OSS Library apps it deploys, such as Superset, Airflow, and pgAdmin) is controlled by its own [installation scenario](/edb-postgres-ai/current/hybrid-manager/install/install_guide/planning_arch/#available-scenarios), separated from `core`.

- If your `HybridControlPlane` spec already includes the `ai` scenario, `marketplace` is added automatically during the upgrade. No action is required.
- If your spec lists only `core` (without `ai`) and you use the OSS Library/marketplace apps, you must explicitly add `marketplace` to your `spec.scenarios` list. Perform this operation once the operator is on 2.1 or later, and before you bump `spec.version` — earlier operator versions don't recognize `marketplace` and reject the change.

!!!important
If you don't add `marketplace` to your scenario list, kapp-controller and the marketplace apps are removed as no longer part of your selected scenarios. Removing an app also removes the data it holds, so add `marketplace` before you bump `spec.version` rather than after.
!!!

To keep the marketplace, upgrade the operator to 2.1 or later, then add `marketplace` to `spec.scenarios` in your `HybridControlPlane` CR before you bump `spec.version`:

```yaml
apiVersion: edbpgai.edb.com/v1alpha1
kind: HybridControlPlane
metadata:
  name: edbpgai
spec:
  scenarios:
    - core
    - dbaas
    - marketplace # keeps kapp-controller and the OSS Library apps
```

Add `dbaas` at the same time if your `spec` lists only `core`. `dbaas` itself isn't new, but its contents changed between releases. In HM 1.4.1, `upm-api-gucs` and `pg4k-additional-controllers` belonged to `core`. From 1.4.2, they belong to `dbaas` instead. A 1.4.1 installation that pins `spec.scenarios` to `core` is already running both components, so after the move they fall outside every scenario your `spec` selects, and the upgrade removes them. `dbaas` depends only on `core`, and nothing adds it for you automatically, unlike `ai`, which pulls in `marketplace` as a dependency.

If you omit `spec.scenarios` entirely, the operator applies its default set, which on operator 2.1 includes both `dbaas` and `marketplace`, so no action is required. That default depends on your operator version, so don't rely on it — list your scenarios explicitly.

## Upgrading multi-DC deployments

In a [multi-DC deployment](/edb-postgres-ai/current/hybrid-manager/install/configuration/multi_dc/), all locations must run the same HM version. The Beacon server on the primary and the Beacon agents on the secondaries must run the same version to communicate reliably and provide full feature functionality.

When upgrading a multi-DC deployment, upgrade the primary location first, then upgrade each data-only secondary location to the same version immediately after. For the full procedure, see [Upgrading a multi-DC deployment](/edb-postgres-ai/current/hybrid-manager/install/configuration/multi_dc/multi-dc/#upgrading-a-multi-dc-deployment).
